--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@types/styled-components": "^5.1.34",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.9"
+    "react-hook-form": "^7.51.4",
+    "styled-components": "^6.1.9",
+    "zod": "^3.23.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
